each project page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="home-section">
       <article class="home-projects">
-        <p>PROJECT 1</p>
+        <p><a id="Each" href="EachProject.html"> PROJECT 1</a></p>
         <!-- <div>
           <img class="italy" src="imgz/italy.jpg" alt=" first italy">
         </div> -->
