lab page added, and changed colors on some texts

--- a/EachProject.html
+++ b/EachProject.html
@@ -31,7 +31,7 @@
     </section>
 
     <section class="project-buttons">
-      <button> <a id="proj" href="labwork.html"> View Full Project</a> </button>
+      <button> <a id="proj" href="#"> View Full Project</a> </button>
     </section>
 
     <section class="code-buttons">
