--- a/eachlab.html
+++ b/eachlab.html
@@ -17,9 +17,9 @@
 
     <section class="project-section">
         <article class="each-project">
-            <h1>PROJECT 1</h1>
-            <h2>Project Title</h2>
-            <img src="imgz/paris.jpg" alt="img-pic">
+            <h1>LAB 1</h1>
+            <h2>Title</h2>
+            <img src="imgz/spain.jpg" alt="img-pic">
         </article>
         <article class="description">
           <h3> Description</h3>
@@ -31,7 +31,7 @@
     </section>
 
     <section class="project-buttons">
-      <button> <a id="proj" href="labwork.html"> View Full Project</a> </button>
+      <button> <a id="proj" href="#"> View Full Project</a> </button>
     </section>
 
     <section class="code-buttons">
