--- a/labwork.html
+++ b/labwork.html
@@ -15,7 +15,8 @@
 
   <section class="lab-section">
     <article class="lab-projects">
-      <p>LAB 1 : Project Title</p>
+      <p><a id="lablink" href="eachlab.html"> LAB 1 Project Title</a></p>
+      <!-- <p>LAB 1 : Project Title</p> -->
     </article>
 
     <article class="lab-projects">
