--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <section class="home-buttons">
       <button> <a id="lab" href="labwork.html"> Lab Work</a> </button>
-      <button>Code</button>
-      <button>Process Blog</button>
+      <button> <a id="maincode" href="#"> Code </a> </button>
+      <button> <a id="blog" href="#"> Process Blog </a> </button>
     </section>
 
 
