project + lab page (responsive)
made the project and lab page responsive on all screen types.

--- a/index.html
+++ b/index.html
@@ -3,30 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Class portal</title>
+    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <title>Class Portal</title>
     <link rel="stylesheet" href="main.css">
   </head>
+
   <body>
+    <!-- (Navigation Bar) -->
     <nav class="navbar">
         <a id="logo" href="index.html"> Sohini Pandit</a>
-        <h2 class="designation"> CREATIVE DESIGNER</h2>
+        <!-- <h2> CREATIVE DESIGNER</h2> -->
     </nav>
 
 
-    <section class="home-section">
+  <!--Main Landing page layout-->
+    <section class="home">
       <article class="home-projects">
-        <p><a id="Each" href="EachProject.html"> PROJECT 1</a></p>
-        <!-- <div>
-          <img class="italy" src="imgz/italy.jpg" alt=" first italy">
-        </div> -->
+        <p> <a id="Each" href="EachProject.html"> PROJECT 1</a> </p>
       </article>
+
       <article class="home-projects">
         <p>PROJECT 2</p>
       </article>
+
       <article class="home-projects">
         <p>PROJECT 3</p>
       </article>
+
     </section>
 
 
@@ -36,6 +39,8 @@
       <button> <a id="blog" href="#"> Process Blog </a> </button>
     </section>
 
+
+  
 
 
 
@@ -56,3 +61,7 @@
 	<!-- <script src="index.js"></script> -->
   </body>
 </html>
+
+ <!-- <div>
+          <img class="italy" src="imgz/italy.jpg" alt=" first italy">
+        </div> -->
