Landing page done
made landing page responsive and fixed other pages too

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Class Portal</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
@@ -19,7 +18,7 @@
   <!--Main Landing page layout-->
     <section class="home">
       <article class="home-projects">
-        <p> <a id="Each" href="EachProject.html"> PROJECT 1</a> </p>
+        <p> <a id="each" href="EachProject.html"> PROJECT 1</a> </p>
       </article>
 
       <article class="home-projects">
