--- a/labwork.html
+++ b/labwork.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar">
       <a id="logo" href="index.html"> Sohini Pandit</a>
-      <h2 class="designation"> CREATIVE DESIGNER</h2>
+      <!-- <h2 class="designation"> CREATIVE DESIGNER</h2> -->
   </nav>
 
   <section class="lab-section">
