--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="home-buttons">
       <button> <a id="lab" href="labwork.html"> Lab Work</a> </button>
       <button> <a id="maincode" href="#"> Code </a> </button>
-      <button> <a id="blog" href="#"> Process Blog </a> </button>
+      <button> <a id="blog" href="https://github.com/sohin10/Classportal2/blob/18a8ff13df62ed3315547cbcd3bae23ee75112c5/README.md"> Process Blog </a> </button>
     </section>
 
 
