updated links to blog and code
process blog page and codes repo page attached in html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <section class="home-buttons">
       <button> <a id="lab" href="labwork.html"> Lab Work</a> </button>
-      <button> <a id="maincode" href="#"> Code </a> </button>
-      <button> <a id="blog" href="https://github.com/sohin10/Classportal2/blob/18a8ff13df62ed3315547cbcd3bae23ee75112c5/README.md"> Process Blog </a> </button>
+      <button> <a id="maincode" href="https://github.com/sohin10/Classportal2.git"> Code </a> </button>
+      <button> <a id="blog" href="https://github.com/sohin10/Classportal2/blob/bcae7b683f9ad87267bbe9c6303e946af18273e9/README.md"> Process Blog </a> </button>
     </section>
 
 
